# strata

./: .gitignore  pyproject.toml
scalix/components/: flex_attention.py
strata/: config.py  llm.py
strata/cache/: block_manager.py  conv_state.py  kv_cache.py  state_manager.py
strata/engine/: engine.py  model_runner.py  sampling.py  scheduler.py  sequence.py
strata/models/: base.py  registry.py
strata/models/lfm/: config.py  layers.py  model.py  rope.py  weights.py
strata/utils/: chat_template.py  profiling.py  tokenizer.py
